# bluesky-platform

./: README.md
.github/workflows/: scraper.yaml
bluesky_scraper/: Dockerfile  Dockerfile.playwright  Makefile  README.md  pyproject.toml
bluesky_scraper/scraper_bluesky/: __main__.py  scraper.py  scraper_bs4.py  screenshots.py  trace_utils.py  txt.py
clusters/my-cluster/flux-system/: gotk-sync.yaml
docs/designs/001-eks/: README.md
docs/designs/002-kubeflow/: README.md
docs/peps/001-instrumentation-tempo/: README.md
docs/peps/001-instrumentation-tempo/app/: Makefile  README.md  pyproject.toml  setup-auth.sh
docs/peps/001-instrumentation-tempo/app/src/: __main__.py
docs/peps/002-pipeline-deduping/: README.md
docs/peps/002-pipeline-deduping/app/: .gitignore  Dockerfile  Dockerfile.valkey  Makefile  README.md  pyproject.toml  valkey.conf
generic_scraper/: Dockerfile  Makefile  README.md  pyproject.toml
generic_scraper/generic_scraper/: __main__.py
generic_scraper/tests/: dummy_test.py
infra/: .gitignore  README.md  cloudtrail.tf  eks.tf  exec-shell-with-envvars.sh  flux.tf  iam.tf  karpenter.tf  main.tf  setup_env_vars.sh  source-envars-for-shell.sh  variables.tf  vpc.tf
infra/kube-resources/: pod.yaml  pytorch.yaml
kube/apps/base/ubuntu-sleeper/: deploy.yaml  kustomization.yaml  pod.yaml
kube/apps/platform/: kustomization.yaml
kube/clusters/platform/: apps.yaml  infra.yaml
kube/clusters/platform/flux-system/: gotk-components.yaml  gotk-sync.yaml
kube/infra/configs/: karpenter-nodepool-g5g.yaml  karpenter-nodepools.yaml  nvidia-device-plugin.yaml
kube/infra/controllers/: karpenter.yaml
kube/platform/default/: ubuntu-sleeper.yaml
kube/platform/flux-system/: gotk-sync.yaml
kube/platform/karpenter/: karpenter.yaml
scraper/: Dockerfile  Makefile  README.md  pyproject.toml
scraper/scraper_bluesky/: __main__.py
